main/default/objects/Workstep_Template__c/fields/External_Callout_Type__c.field-meta.xml
<CustomField>
    <fullName>External_Callout_Type__c</fullName>
    <label>External Callout Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>e911Task</fullName>
            </value>
            <value>
                <fullName>SendToBilling</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>