main/default/objects/Workstep_Template__c/fields/Non_Access_SLA__c.field-meta.xml
<CustomField>
    <fullName>Non_Access_SLA__c</fullName>
    <formula>Workstep_Library__r.Non_Access_SLA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Non-Access SLA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>