main/default/objects/Workstep_Template__c/fields/Workplan_Template__c.field-meta.xml
<CustomField>
    <fullName>Workplan_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Workplan Template</label>
    <referenceTo>Workplan_Template__c</referenceTo>
    <relationshipLabel>Workstep Templates</relationshipLabel>
    <relationshipName>Workstep_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>