main/default/objects/Workstep_Template__c/fields/Workstep_Library__c.field-meta.xml
<CustomField>
    <fullName>Workstep_Library__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Workstep Library</label>
    <referenceTo>Workstep_Library__c</referenceTo>
    <relationshipLabel>Workstep Templates</relationshipLabel>
    <relationshipName>Workstep_Templates</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>