main/default/objects/Workstep_Template__c/listViews/All_External_IDs.listView-meta.xml
<ListView>
    <fullName>All_External_IDs</fullName>
    <columns>External_ID__c</columns>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Non_Access_Duration__c</columns>
    <columns>Non_Access_Lag__c</columns>
    <columns>Provisioning_Product__c</columns>
    <columns>Workplan_Template__c</columns>
    <columns>Workstep_Library__c</columns>
    <filterScope>Everything</filterScope>
    <label>All External IDs</label>
</ListView>