main/default/objects/Workstep_Template__c/listViews/BPM_Project_Management_Workstep_Template.listView-meta.xml
<ListView>
    <fullName>BPM_Project_Management_Workstep_Template</fullName>
    <filterScope>Queue</filterScope>
    <label>BPM - Project Management</label>
    <queue>BPM_Project_Management</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>