main/default/objects/Workstep_Template__c/listViews/CAN_SIP_Activations_Workstep_Template.listView-meta.xml
<ListView>
    <fullName>CAN_SIP_Activations_Workstep_Template</fullName>
    <filterScope>Queue</filterScope>
    <label>CAN-SIP-Activations</label>
    <queue>CAN_SIP_Activations</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>