main/default/objects/Workstep_Template__c/listViews/CDN_Engineering_Network_Design_Workstep_Template.listView-meta.xml
<ListView>
    <fullName>CDN_Engineering_Network_Design_Workstep_Template</fullName>
    <filterScope>Queue</filterScope>
    <label>CDN Engineering Network Design</label>
    <queue>CDN_Engineering_Network_Design</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>