main/default/objects/Workstep_Template__c/listViews/CS_DPROV_Workstep_Template.listView-meta.xml
<ListView>
    <fullName>CS_DPROV_Workstep_Template</fullName>
    <filterScope>Queue</filterScope>
    <label>CS-DPROV</label>
    <queue>CS_DPROV</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>