main/default/objects/Workstep_Template__c/listViews/CS_PortOut_Workstep_Template.listView-meta.xml
<ListView>
    <fullName>CS_PortOut_Workstep_Template</fullName>
    <filterScope>Queue</filterScope>
    <label>CS-PortOut</label>
    <queue>CS_PortOut</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>