main/default/objects/Workstep_Template__c/listViews/Data_Internet_Delivery_Management_Workstep_Template.listView-meta.xml
<ListView>
    <fullName>Data_Internet_Delivery_Management_Workstep_Template</fullName>
    <filterScope>Queue</filterScope>
    <label>Data/Internet-Delivery Management</label>
    <queue>Data_Internet_Delivery_Management</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>